--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>jonathanbatten's Git Achievements</h2>
-Unlocked 16/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 317 points<br>
+Unlocked 16/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 327 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -62,6 +62,7 @@ Unlocked 16/48 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Master Product Manager (Level 7)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Socialite (Level 8)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Master Socialite (Level 9)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Master Stone Mason (Level 8)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Master Stone Mason (Level 9)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
@@ -80,26 +81,27 @@ Unlocked 16/48 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   6886 symbolic-ref
-   6552 status
-   1010 checkout
-    583 add
-    510 rebase
-    472 push
-    326 pull
-    284 commit
-    206 merge
-    144 stash
-     79 branch
+   7270 symbolic-ref
+   6988 status
+   1054 checkout
+    621 add
+    529 rebase
+    512 push
+    339 pull
+    310 commit
+    207 merge
+    151 stash
+     85 branch
      34 config
      21 achievements
-     16 fetch
+     19 rm
+     18 fetch
      13 bisect
-     10 rm
+      6 mv
+      5 reset
       4 remote
       4 clone
       2 show
-      2 reset
       2 reflog
       2 gui
       1 --help
