--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>jonathanbatten's Git Achievements</h2>
-Unlocked 16/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 327 points<br>
+Unlocked 16/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 336 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -59,6 +59,7 @@ Unlocked 16/48 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Master Banker (Level 7)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Master Blacksmith (Level 7)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Master Butcher (Level 7)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
+<li><div class="title">Master Butcher (Level 8)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Master Product Manager (Level 7)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Socialite (Level 8)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -81,29 +82,29 @@ Unlocked 16/48 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   7270 symbolic-ref
-   6988 status
-   1054 checkout
-    621 add
-    529 rebase
-    512 push
-    339 pull
-    310 commit
+   7762 symbolic-ref
+   7528 status
+   1103 checkout
+    669 add
+    547 push
+    546 rebase
+    357 pull
+    339 commit
     207 merge
-    151 stash
-     85 branch
-     34 config
+    163 stash
+     94 branch
+     35 config
+     22 fetch
      21 achievements
      19 rm
-     18 fetch
      13 bisect
+      9 reset
       6 mv
-      5 reset
       4 remote
       4 clone
+      3 gui
       2 show
       2 reflog
-      2 gui
       1 --help
       1 cherry-pick
 </pre>
